Changed project settings

--- a/DetoursCppObject/DetoursCppObject.vcxproj
+++ b/DetoursCppObject/DetoursCppObject.vcxproj
@@ -154,8 +154,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>C:\Users\tyler\Documents\Programming\vcpkg\DetoursCppObject\DetoursCppObject\Detours\lib.X64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>detours.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
